--- a/Projected_mixed.ipynb
+++ b/Projected_mixed.ipynb
@@ -562,6 +562,82 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## More data: empirical Haar\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0.43288894+0.4691636j   0.45363548-0.57894186j  0.1997022 -0.08895966j\n",
+      "  -0.0333355 -0.05126206j]\n",
+      " [-0.2833902 -0.59031218j  0.31559271-0.32614111j  0.50480835+0.19341777j\n",
+      "   0.20106071+0.1805199j ]\n",
+      " [-0.09050373-0.29213439j  0.33434293-0.18279512j -0.5563204 -0.04509148j\n",
+      "   0.20644459-0.63806138j]\n",
+      " [ 0.16997853+0.20319468j -0.32762678+0.02314792j  0.22346897+0.54635089j\n",
+      "   0.60145689-0.33429929j]]\n",
+      "[1. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "U = unitary_group.rvs(4)\n",
+    "print(U)\n",
+    "\n",
+    "Psi0 = Psi_initial(4)\n",
+    "print(Psi0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# N_A = 1, N_B = 1\n",
+    "\n",
+    "purity_11 = 0\n",
+    "\n",
+    "for i in range(100):\n",
+    "    Psi0 = Psi_initial(2)\n",
+    "    U = unitary_group.rvs(4)\n",
+    "    Psi = U @ Psi0\n",
+    "\n",
+    "    rhoA = np.trace(np.outer(np.conjugate(Psi), Psi).reshape(2,2,2,2), axis1=1, axis2=3)\n",
+    "\n",
+    "    purity_11 += np.trace(rhoA @ rhoA)\n",
+    "\n",
+    "purity_11 /= 100\n",
+    "\n",
+    "purity_12 = 0\n",
+    "purity_21 = 0\n",
+    "\n",
+    "for i in range(100):\n",
+    "    Psi0 = Psi_initial(3)\n",
+    "    U = unitary_group.rvs(8)\n",
+    "    Psi = U @ Psi0\n",
+    "\n",
+    "    rhoA = np.trace(np.outer(np.conjugate(Psi), Psi).reshape(2,4,2,4), axis1=1, axis2=3)\n",
+    "    purity_12 += np.trace(rhoA @ rhoA)\n",
+    "\n",
+    "    rhoA = np.trace(np.outer(np.conjugate(Psi), Psi).reshape(4,2,4,2), axis1=1, axis2=3)\n",
+    "    purity_21 += np.trace(rhoA @ rhoA)\n",
+    "\n",
+    "purity_12 /= 100\n",
+    "purity_21 /= 100"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Plots and analysis"
    ]
   },
