find mixed ensemble

--- a/Projected_mixed.ipynb
+++ b/Projected_mixed.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -603,9 +603,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(0.7991734961798627+0j)\n",
-      "(0.6669271052654291+0j)\n",
-      "(0.6672248668313306+0j)\n"
+      "(0.7996927338134923+0j)\n",
+      "(0.6664382016131121+0j)\n",
+      "(0.6662733083711402+0j)\n"
      ]
     }
    ],
@@ -712,7 +712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -721,7 +721,7 @@
        "Text(0.5, 1.0, '$N_A = 2, N_B = 1$')"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -783,33 +783,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "d_A = 2, d_B = 2, P = 0.7998507164439658\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[6], line 9\u001b[0m\n\u001b[1;32m      7\u001b[0m purity \u001b[39m=\u001b[39m \u001b[39m0\u001b[39m\n\u001b[1;32m      8\u001b[0m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39m100000\u001b[39m):\n\u001b[0;32m----> 9\u001b[0m     U \u001b[39m=\u001b[39m unitary_group\u001b[39m.\u001b[39;49mrvs(d)    \n\u001b[1;32m     10\u001b[0m     psi \u001b[39m=\u001b[39m U \u001b[39m@\u001b[39m psi0\n\u001b[1;32m     11\u001b[0m     rhoA \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mtrace(np\u001b[39m.\u001b[39mouter(np\u001b[39m.\u001b[39mconjugate(psi), psi)\u001b[39m.\u001b[39mreshape(d_A, d_B, d_A, d_B), axis1\u001b[39m=\u001b[39m\u001b[39m1\u001b[39m, axis2\u001b[39m=\u001b[39m\u001b[39m3\u001b[39m)\n",
-      "File \u001b[0;32m~/anaconda3/envs/py311/lib/python3.11/site-packages/scipy/stats/_multivariate.py:4125\u001b[0m, in \u001b[0;36munitary_group_gen.rvs\u001b[0;34m(self, dim, size, random_state)\u001b[0m\n\u001b[1;32m   4122\u001b[0m size \u001b[39m=\u001b[39m (size,) \u001b[39mif\u001b[39;00m size \u001b[39m>\u001b[39m \u001b[39m1\u001b[39m \u001b[39melse\u001b[39;00m ()\n\u001b[1;32m   4123\u001b[0m z \u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\u001b[39m/\u001b[39mmath\u001b[39m.\u001b[39msqrt(\u001b[39m2\u001b[39m)\u001b[39m*\u001b[39m(random_state\u001b[39m.\u001b[39mnormal(size\u001b[39m=\u001b[39msize \u001b[39m+\u001b[39m (dim, dim)) \u001b[39m+\u001b[39m\n\u001b[1;32m   4124\u001b[0m                     \u001b[39m1\u001b[39mj\u001b[39m*\u001b[39mrandom_state\u001b[39m.\u001b[39mnormal(size\u001b[39m=\u001b[39msize \u001b[39m+\u001b[39m (dim, dim)))\n\u001b[0;32m-> 4125\u001b[0m q, r \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39;49mlinalg\u001b[39m.\u001b[39;49mqr(z)\n\u001b[1;32m   4126\u001b[0m \u001b[39m# The last two dimensions are the rows and columns of R matrices.\u001b[39;00m\n\u001b[1;32m   4127\u001b[0m \u001b[39m# Extract the diagonals. Note that this eliminates a dimension.\u001b[39;00m\n\u001b[1;32m   4128\u001b[0m d \u001b[39m=\u001b[39m r\u001b[39m.\u001b[39mdiagonal(offset\u001b[39m=\u001b[39m\u001b[39m0\u001b[39m, axis1\u001b[39m=\u001b[39m\u001b[39m-\u001b[39m\u001b[39m2\u001b[39m, axis2\u001b[39m=\u001b[39m\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m)\n",
-      "File \u001b[0;32m<__array_function__ internals>:180\u001b[0m, in \u001b[0;36mqr\u001b[0;34m(*args, **kwargs)\u001b[0m\n",
-      "File \u001b[0;32m~/anaconda3/envs/py311/lib/python3.11/site-packages/numpy/linalg/linalg.py:930\u001b[0m, in \u001b[0;36mqr\u001b[0;34m(a, mode)\u001b[0m\n\u001b[1;32m    928\u001b[0m m, n \u001b[39m=\u001b[39m a\u001b[39m.\u001b[39mshape[\u001b[39m-\u001b[39m\u001b[39m2\u001b[39m:]\n\u001b[1;32m    929\u001b[0m t, result_t \u001b[39m=\u001b[39m _commonType(a)\n\u001b[0;32m--> 930\u001b[0m a \u001b[39m=\u001b[39m a\u001b[39m.\u001b[39;49mastype(t, copy\u001b[39m=\u001b[39;49m\u001b[39mTrue\u001b[39;49;00m)\n\u001b[1;32m    931\u001b[0m a \u001b[39m=\u001b[39m _to_native_byte_order(a)\n\u001b[1;32m    932\u001b[0m mn \u001b[39m=\u001b[39m \u001b[39mmin\u001b[39m(m, n)\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
-     ]
+     "data": {
+      "text/plain": [
+       "\"\\nfor d_A in range(2,9):\\n    for d_B in range(d_A,9):\\n        d = d_A * d_B\\n        psi0 = np.zeros(d)\\n        psi0[0] = 1\\n        \\n        purity = 0\\n        for i in range(100000):\\n            U = unitary_group.rvs(d)    \\n            psi = U @ psi0\\n            rhoA = np.trace(np.outer(np.conjugate(psi), psi).reshape(d_A, d_B, d_A, d_B), axis1=1, axis2=3)\\n            purity += np.trace(rhoA @ rhoA)\\n        \\n        print(f'd_A = {d_A}, d_B = {d_B}, P = {np.real(purity)/100000}')\\n\""
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# Note: this takes pretty long, results all in overleaf (converted to fractions)\n",
+    "'''\n",
     "for d_A in range(2,9):\n",
     "    for d_B in range(d_A,9):\n",
     "        d = d_A * d_B\n",
@@ -823,7 +813,82 @@
     "            rhoA = np.trace(np.outer(np.conjugate(psi), psi).reshape(d_A, d_B, d_A, d_B), axis1=1, axis2=3)\n",
     "            purity += np.trace(rhoA @ rhoA)\n",
     "        \n",
-    "        print(f'd_A = {d_A}, d_B = {d_B}, P = {np.real(purity)/100000}')"
+    "        print(f'd_A = {d_A}, d_B = {d_B}, P = {np.real(purity)/100000}')\n",
+    "'''"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now the same thing, for fewer dimensions, to check my formulae for the third and fourth moments."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "d_A = 2, d_B = 2\n",
+      "P_3 = 0.7003779709177806, expected P_3 = 0.7\n",
+      "P_4 = 0.6290445985608225, expected P_4 = 0.6285714285714286\n",
+      "d_A = 2, d_B = 3\n",
+      "P_3 = 0.5711304081199601, expected P_3 = 0.5714285714285714\n",
+      "P_4 = 0.4758532417615665, expected P_4 = 0.47619047619047616\n",
+      "d_A = 2, d_B = 4\n",
+      "P_3 = 0.5008546554595283, expected P_3 = 0.5\n",
+      "P_4 = 0.39490893402418903, expected P_4 = 0.3939393939393939\n",
+      "d_A = 2, d_B = 5\n",
+      "P_3 = 0.45457574402753315, expected P_3 = 0.45454545454545453\n",
+      "P_4 = 0.3427112579349642, expected P_4 = 0.34265734265734266\n",
+      "d_A = 3, d_B = 3\n",
+      "P_3 = 0.4179257982714417, expected P_3 = 0.41818181818181815\n",
+      "P_4 = 0.3087930523667494, expected P_4 = 0.3090909090909091\n",
+      "d_A = 3, d_B = 4\n",
+      "P_3 = 0.34095888326823626, expected P_3 = 0.34065934065934067\n",
+      "P_4 = 0.23107439003795288, expected P_4 = 0.23076923076923078\n",
+      "d_A = 3, d_B = 5\n",
+      "P_3 = 0.2937113555206291, expected P_3 = 0.29411764705882354\n",
+      "P_4 = 0.18589074667784217, expected P_4 = 0.18627450980392157\n",
+      "d_A = 4, d_B = 4\n",
+      "P_3 = 0.2648222460765771, expected P_3 = 0.2647058823529412\n",
+      "P_4 = 0.16108125139286433, expected P_4 = 0.1609907120743034\n",
+      "d_A = 4, d_B = 5\n",
+      "P_3 = 0.22060939622092507, expected P_3 = 0.22077922077922077\n",
+      "P_4 = 0.12349040020415279, expected P_4 = 0.12365894974590627\n",
+      "d_A = 5, d_B = 5\n",
+      "P_3 = 0.1794983884656299, expected P_3 = 0.1794871794871795\n",
+      "P_4 = 0.0915877631384957, expected P_4 = 0.09157509157509157\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Third and fourth moment formula\n",
+    "for d_A in range(2,6):\n",
+    "    for d_B in range(d_A,6):\n",
+    "        d = d_A * d_B\n",
+    "        psi0 = np.zeros(d)\n",
+    "        psi0[0] = 1\n",
+    "        \n",
+    "        third_moment = 0\n",
+    "        fourth_moment = 0\n",
+    "        for i in range(100000):\n",
+    "            U = unitary_group.rvs(d)    \n",
+    "            psi = U @ psi0\n",
+    "            rhoA = np.trace(np.outer(np.conjugate(psi), psi).reshape(d_A, d_B, d_A, d_B), axis1=1, axis2=3)\n",
+    "            third_moment += np.trace(rhoA @ rhoA @ rhoA)\n",
+    "            fourth_moment += np.trace(rhoA @ rhoA @ rhoA @ rhoA)\n",
+    "        \n",
+    "        third_expected = (1 + 3 * d_A * d_B + d_A ** 2 + d_B ** 2) / ((d+1) * (d+2))\n",
+    "        fourth_expected = (d_A ** 3 + d_B ** 3 + 6 * d_A * d_B ** 2 + 6 * d_A ** 2 * d_B + 5* d_A + 5* d_B) / ((d+1) * (d+2) * (d+3))\n",
+    "        \n",
+    "        print(f'd_A = {d_A}, d_B = {d_B}')\n",
+    "        print(f'P_3 = {np.real(third_moment)/100000}, expected P_3 = {third_expected}')\n",
+    "        print(f'P_4 = {np.real(fourth_moment)/100000}, expected P_4 = {fourth_expected}')"
    ]
   }
  ],
