--- a/projected_faulty_measurement.ipynb
+++ b/projected_faulty_measurement.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,31 +96,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0.340613983760482, array([[ 0.84877607+0.j        , -0.15355461-0.06639505j],\n",
-      "       [-0.15355461+0.06639505j,  0.15122393+0.j        ]])], [0.10804238281824599, array([[ 0.34657808+0.j        , -0.20811278+0.26969462j],\n",
-      "       [-0.20811278-0.26969462j,  0.65342192+0.j        ]])], [0.3799084684808134, array([[ 0.47946224+0.j        , -0.41987235+0.09737188j],\n",
-      "       [-0.41987235-0.09737188j,  0.52053776+0.j        ]])], [0.17143516494045843, array([[ 0.58303317+0.j        , -0.3550078 -0.20790181j],\n",
-      "       [-0.3550078 +0.20790181j,  0.41696683+0.j        ]])]]\n"
+      "1.0000000000000009\n",
+      "0.9999999999999994\n",
+      "1.0000000000000007\n",
+      "1.0000000000000002\n",
+      "1.0000000000000009\n",
+      "1.0000000000000004\n",
+      "1.0000000000000007\n",
+      "0.9999999999999999\n",
+      "1.0000000000000007\n",
+      "1.0000000000000009\n"
      ]
     }
    ],
    "source": [
     "N_A = 1\n",
-    "N_B = 2\n",
-    "p = 0.1\n",
+    "N_B = 7\n",
+    "p = 0.2\n",
     "\n",
-    "Psi = random_state(2 ** (N_A + N_B))\n",
-    "Projected_ensemble = Get_PrEns(Psi, N_A, N_B)\n",
-    "Mixed_ensemble = Get_MixEns(Projected_ensemble, N_A, N_B, p)\n",
+    "traces = np.zeros(10)\n",
+    "purities = np.zeros(10)\n",
+    "thirds = np.zeros(10)\n",
     "\n",
-    "print(Mixed_ensemble)"
+    "for j in range(10):\n",
+    "    Psi = random_state(2**8)\n",
+    "    Projected_ensemble = Get_PrEns(Psi, N_A, N_B)\n",
+    "    Mixed_ensemble = Get_MixEns(Projected_ensemble, N_A, N_B, p)\n",
+    "\n",
+    "    trace = 0\n",
+    "    purity = 0\n",
+    "    third = 0\n",
+    "\n",
+    "    for i in range(len(Mixed_ensemble)):\n",
+    "        p = Mixed_ensemble[i][0]\n",
+    "        rho = Mixed_ensemble[i][1]\n",
+    "        trace += p * np.trace(rho)\n",
+    "        purity += p * np.trace(rho @ rho)\n",
+    "        third += p * np.trace(rho @ rho @ rho)\n",
+    "    \n",
+    "    traces[j] = np.real(trace)\n",
+    "    purities[j] = np.real(purity)\n",
+    "    thirds[j] = np.real(third)\n"
    ]
   }
  ],
